crates/mecojoni-core/tests/fixtures/invalid/body-unterminated-comment.meco
---
meco: 1
module: invalid
---

<!-- never closes
